// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bodem > with results > should show the right overviewpage 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _OverviewPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Bodem"
          class="_ThemaIcon_2fc54d"
          fill="black"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.772 9.73134C13.2283 8.82556 13.4851 7.80275 13.4851 6.72015C13.4851 3.00871 10.4664 0 6.74257 0C3.01875 0 0 3.00871 0 6.72015C0 9.42558 1.60404 11.7576 3.91595 12.8231C1.50899 15.0094 0 18.1604 0 21.667H3.01322C3.01322 16.7143 7.03084 12.7101 12 12.7101C14.0058 12.7101 15.8565 13.3625 17.3505 14.4663C18.0434 13.9952 18.686 13.5601 19.2219 13.1981C19.4931 13.0149 19.737 12.8504 19.9464 12.7093C18.0077 10.9998 15.5122 9.90546 12.772 9.73134ZM2.9967 3.73342V9.70688H3.74587V7.46683H4.86963C5.90402 7.46683 6.74257 6.63108 6.74257 5.60013C6.74257 4.56917 5.90402 3.73342 4.86963 3.73342H2.9967ZM7.49174 3.73342H8.24091V5.97347H9.36467C10.3991 5.97347 11.2376 6.80922 11.2376 7.84018C11.2376 8.87113 10.3991 9.70688 9.36467 9.70688H7.49174V3.73342ZM5.99339 5.60013C5.99339 6.2187 5.49027 6.72015 4.86963 6.72015H3.74587V4.4801H4.86963C5.49027 4.4801 5.99339 4.98155 5.99339 5.60013ZM8.24091 6.72015V8.9602H9.36467C9.98531 8.9602 10.4884 8.45875 10.4884 7.84018C10.4884 7.2216 9.98531 6.72015 9.36467 6.72015H8.24091ZM19.4491 16.65C20.4201 18.0806 20.9868 19.8069 20.9868 21.667H24C24 18.7627 22.9598 16.1024 21.2332 14.032C21.0953 14.2352 20.9358 14.4701 20.759 14.7301C20.3862 15.2783 19.9362 15.9385 19.4491 16.65ZM10.5793 23.3439C11.457 24.2187 12.8801 24.2187 13.7578 23.3439C14.6355 22.4691 21.1743 12.7842 21.1743 12.7842C21.1743 12.7842 11.457 19.3012 10.5793 20.176C9.70162 21.0508 9.70162 22.4691 10.5793 23.3439Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Home
        </a>
        <h2
          class="ams-heading ams-heading--1"
        >
          Bodem
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    >
      <p>
        Op deze pagina vindt u informatie over uw lood in de bodem-check.
      </p>
      <p>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/wonen-leefomgeving/bodem/lood-grond/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
          Meer informatie over lood in de bodem.
        </a>
      </p>
    </div>
    <section
      class="_SectionCollapsible_b93dc7"
    >
      <h3
        class="ams-heading ams-heading--3 _Title_b93dc7 _TitleWithItems_b93dc7"
      >
        <button
          aria-expanded="true"
          class="_TitleToggle_b93dc7"
        >
          <svg
            aria-hidden="true"
            class="_CaretIcon_b93dc7"
            focusable="false"
            height="32px"
            viewBox="0 0 32 32"
            width="32px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
           Lopende aanvragen
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="_Panel_b93dc7"
        style="height: 0px;"
      >
        <div
          class="_PanelInner_b93dc7"
        >
          <table
            class="_Table_a66dcc"
          >
            <thead>
              <tr
                class="_TableRow_a66dcc"
              >
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Adres
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Aangevraagd
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Status
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Adres:
                  </span>
                  <a
                    class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
                    href="/lood-meting/OL-001478"
                  >
                    <svg
                      aria-hidden="true"
                      class="_Icon_c3ab45 _Icon__left_c3ab45"
                      fill="#000"
                      focusable="false"
                      height="14px"
                      viewBox="0 0 32 32"
                      width="14px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <title>
                        chevron-rechts-icoon
                      </title>
                      <polygon
                        points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
                      />
                    </svg>
                    Schipluidenlaan 12A
                  </a>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Aangevraagd:
                  </span>
                  <span>
                    01 december 2022
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Status:
                  </span>
                  <span>
                    Ontvangen
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
    <section
      class="_SectionCollapsible_b93dc7"
    >
      <h3
        class="ams-heading ams-heading--3 _Title_b93dc7 _TitleWithItems_b93dc7"
      >
        <button
          aria-expanded="true"
          class="_TitleToggle_b93dc7"
        >
          <svg
            aria-hidden="true"
            class="_CaretIcon_b93dc7"
            focusable="false"
            height="32px"
            viewBox="0 0 32 32"
            width="32px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
           Eerdere aanvragen
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="_Panel_b93dc7"
        style="height: 0px;"
      >
        <div
          class="_PanelInner_b93dc7"
        >
          <table
            class="_Table_a66dcc"
          >
            <thead>
              <tr
                class="_TableRow_a66dcc"
              >
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Adres
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Aangevraagd
                </th>
                <th
                  class="_DisplayProp_a66dcc"
                >
                  Status
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Adres:
                  </span>
                  <a
                    class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
                    href="/lood-meting/OL-001475"
                  >
                    <svg
                      aria-hidden="true"
                      class="_Icon_c3ab45 _Icon__left_c3ab45"
                      fill="#000"
                      focusable="false"
                      height="14px"
                      viewBox="0 0 32 32"
                      width="14px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <title>
                        chevron-rechts-icoon
                      </title>
                      <polygon
                        points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
                      />
                    </svg>
                    Schipluidenlaan 16A
                  </a>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Aangevraagd:
                  </span>
                  <span>
                    29 november 2022
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Status:
                  </span>
                  <span>
                    Afgewezen
                  </span>
                </td>
              </tr>
              <tr
                class="_TableRow_a66dcc"
              >
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Adres:
                  </span>
                  <a
                    class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
                    href="/lood-meting/OL-001471"
                  >
                    <svg
                      aria-hidden="true"
                      class="_Icon_c3ab45 _Icon__left_c3ab45"
                      fill="#000"
                      focusable="false"
                      height="14px"
                      viewBox="0 0 32 32"
                      width="14px"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      <title>
                        chevron-rechts-icoon
                      </title>
                      <polygon
                        points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
                      />
                    </svg>
                    Schipluidenlaan 16A
                  </a>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Aangevraagd:
                  </span>
                  <span>
                    28 november 2022
                  </span>
                </td>
                <td
                  class="_DisplayProp_a66dcc"
                >
                  <span
                    class="_DisplayPropLabel_a66dcc"
                  >
                    Status:
                  </span>
                  <span>
                    Afgehandeld
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`Bodem > without results > should show the right overviewpage 1`] = `
<DocumentFragment>
  <main
    class="_Page_47d7c0 _OverviewPage_47d7c0"
  >
    <header
      class="_PageHeading_3b337d _hasIcon_3b337d _hasBackLink_3b337d"
    >
      <span
        aria-hidden="true"
        class="_Icon_3b337d"
      >
        <svg
          aria-label="Bodem"
          class="_ThemaIcon_2fc54d"
          fill="black"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.772 9.73134C13.2283 8.82556 13.4851 7.80275 13.4851 6.72015C13.4851 3.00871 10.4664 0 6.74257 0C3.01875 0 0 3.00871 0 6.72015C0 9.42558 1.60404 11.7576 3.91595 12.8231C1.50899 15.0094 0 18.1604 0 21.667H3.01322C3.01322 16.7143 7.03084 12.7101 12 12.7101C14.0058 12.7101 15.8565 13.3625 17.3505 14.4663C18.0434 13.9952 18.686 13.5601 19.2219 13.1981C19.4931 13.0149 19.737 12.8504 19.9464 12.7093C18.0077 10.9998 15.5122 9.90546 12.772 9.73134ZM2.9967 3.73342V9.70688H3.74587V7.46683H4.86963C5.90402 7.46683 6.74257 6.63108 6.74257 5.60013C6.74257 4.56917 5.90402 3.73342 4.86963 3.73342H2.9967ZM7.49174 3.73342H8.24091V5.97347H9.36467C10.3991 5.97347 11.2376 6.80922 11.2376 7.84018C11.2376 8.87113 10.3991 9.70688 9.36467 9.70688H7.49174V3.73342ZM5.99339 5.60013C5.99339 6.2187 5.49027 6.72015 4.86963 6.72015H3.74587V4.4801H4.86963C5.49027 4.4801 5.99339 4.98155 5.99339 5.60013ZM8.24091 6.72015V8.9602H9.36467C9.98531 8.9602 10.4884 8.45875 10.4884 7.84018C10.4884 7.2216 9.98531 6.72015 9.36467 6.72015H8.24091ZM19.4491 16.65C20.4201 18.0806 20.9868 19.8069 20.9868 21.667H24C24 18.7627 22.9598 16.1024 21.2332 14.032C21.0953 14.2352 20.9358 14.4701 20.759 14.7301C20.3862 15.2783 19.9362 15.9385 19.4491 16.65ZM10.5793 23.3439C11.457 24.2187 12.8801 24.2187 13.7578 23.3439C14.6355 22.4691 21.1743 12.7842 21.1743 12.7842C21.1743 12.7842 11.457 19.3012 10.5793 20.176C9.70162 21.0508 9.70162 22.4691 10.5793 23.3439Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="_HeadingInner_3b337d"
      >
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45 _BackLink_3b337d"
          href="/"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-links-icoon
            </title>
            <polygon
              points="22.8571429 32 6.85714286 16 22.8571429 0 25.7568858 2.91002571 12.6771943 16 25.7568858 29.0899743"
            />
          </svg>
          Home
        </a>
        <h2
          class="ams-heading ams-heading--1"
        >
          Bodem
        </h2>
      </div>
    </header>
    <div
      class="_PageContent_47d7c0"
    >
      <p>
        Op deze pagina vindt u informatie over uw lood in de bodem-check.
      </p>
      <p>
        <a
          class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
          href="https://www.amsterdam.nl/wonen-leefomgeving/bodem/lood-grond/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="_Icon_c3ab45 _Icon__left_c3ab45"
            fill="#000"
            focusable="false"
            height="14px"
            viewBox="0 0 32 32"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
          Meer informatie over lood in de bodem.
        </a>
      </p>
    </div>
    <section
      class="_SectionCollapsible_b93dc7"
    >
      <h3
        class="ams-heading ams-heading--3 _Title_b93dc7 _TitleWithItems_b93dc7"
      >
        <button
          aria-expanded="true"
          class="_TitleToggle_b93dc7"
        >
          <svg
            aria-hidden="true"
            class="_CaretIcon_b93dc7"
            focusable="false"
            height="32px"
            viewBox="0 0 32 32"
            width="32px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
           Lopende aanvragen
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="_Panel_b93dc7"
        style="height: 0px;"
      >
        <div
          class="_PanelInner_b93dc7"
        >
          <p
            class="_NoItemsMessage_b93dc7"
          >
            U heeft nog geen loodmetingen aangevraagd.
          </p>
        </div>
      </div>
    </section>
    <section
      class="_SectionCollapsible_b93dc7"
    >
      <h3
        class="ams-heading ams-heading--3 _Title_b93dc7 _TitleWithItems_b93dc7"
      >
        <button
          aria-expanded="true"
          class="_TitleToggle_b93dc7"
        >
          <svg
            aria-hidden="true"
            class="_CaretIcon_b93dc7"
            focusable="false"
            height="32px"
            viewBox="0 0 32 32"
            width="32px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              chevron-rechts-icoon
            </title>
            <polygon
              points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
            />
          </svg>
           Eerdere aanvragen
        </button>
      </h3>
      <div
        aria-hidden="false"
        class="_Panel_b93dc7"
        style="height: 0px;"
      >
        <div
          class="_PanelInner_b93dc7"
        >
          <p
            class="_NoItemsMessage_b93dc7"
          >
            U heeft geen eerdere aanvragen.
          </p>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;
